# TotoGL-v2

./: .clang-format  CMakeLists.txt  README.MD
inc/: Group.hpp  Mesh.hpp  OpenGLRenderer.hpp  Renderer.hpp  Scene.hpp  TotoGL.hpp  Window.hpp
inc/Cameras/: Camera.hpp  PerspectiveCamera.hpp
inc/Events/: Event.hpp  EventManager.hpp  EventManager.tpp  WindowEvent.hpp
inc/Lights/: AmbientLight.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp
inc/Materials/: BasicMaterial.hpp  Material.hpp  MultiMaterial.hpp  PhongMaterial.hpp  ShaderMaterial.hpp
inc/Primitives/: Clock.hpp  Geometry.hpp  Object.hpp  Object.tpp  Primitives.hpp  Rotation.hpp  Texture.hpp  Uniform.hpp  Vertex.hpp
inc/Renderers/: GL3Renderer.hpp  Renderer.hpp
src/: Mesh.cpp  OpenGLRenderer.cpp  Renderer.cpp  Window.cpp
src/Cameras/: Camera.cpp  PerspectiveCamera.cpp
src/Events/: WindowEvent.cpp
src/Geometries/: Geometry.cpp  Shapes.cpp
src/Materials/: BasicMaterial.cpp  PhongMaterial.cpp  ShaderMaterial.cpp
src/Materials/Shaders/: background.cpp  basic.cpp  phong.cpp  simple-vertex.cpp
src/Primitives/: Clock.cpp  Object.cpp  Rotation.cpp  Texture.cpp  Uniform.cpp
src/Renderers/: GL3Renderer.cpp
